--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 plugins {
-	id 'org.springframework.boot' version '2.4.3'
+	id 'org.springframework.boot' version '2.6.3'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
 }
 
 group = 'io.educative'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+sourceCompatibility = '17'
 
 configurations {
 	compileOnly {
@@ -27,13 +27,11 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 
-	implementation 'com.google.guava:guava:29.0-jre'
+	implementation 'com.google.guava:guava:31.0.1-jre'
 
-	implementation 'io.springfox:springfox-spring-webmvc:2.10.5'
-	implementation 'io.springfox:springfox-swagger2:2.10.5'
-	implementation 'io.springfox:springfox-swagger-ui:2.10.5'
-
-
+	implementation 'io.springfox:springfox-boot-starter:3.0.0'
+	implementation 'io.springfox:springfox-swagger-ui:3.0.0'
+	implementation 'io.springfox:springfox-swagger2:3.0.0'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
