--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,3 @@
-server.port = 9090
-
-spring.h2.console.enabled = false
+server.port=9090
+spring.h2.console.enabled=false
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
